Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase96-00.out


Parse error on line 1:
class Evil extends Satan {    
-----------^
Expecting '{'